@@ -33,6 +33,9 @@ class CardsController < ApplicationController
 
   # GET /cards/1
   def show
+    if @card.contexts.empty?
+      flash[:notice] = t('cards.no_contexts_assigned')
+    end
     respond_with(@card)
   end
 
