@@ -260,12 +260,27 @@ de:
     outdated: Veraltete Logeinträge
     valid: Aktuelle Logeinträge
     all: Alle Logeinträge
+
   workplaces:
     delete_outdated: Veraltete Arbeitsplätze löschen
     outdated: Veraltete Arbeitsplätze
+
   connectors:
-    do_reboot: Konnektor neu starten? Der Konnektor ist dann für längere Zeit nicht verfügbar!
+    do_reboot: |
+      Konnektor neu starten? Der Konnektor ist dann für längere Zeit
+      nicht verfügbar!
+    no_contexts_assigned: |
+      ACHTUNG! Es ist noch kein Kontext zugeordnet!
+      Ohne Kontext kann der Konnektor keine Informationen abfragen
+      (Ausnahme: Service Directory SDS)
   card_terminals:
     with_smcb: KT mit SMC-B
     update_ip_from_current: Vom Konnektor gemeldete IP übernehmen
-    do_reboot: Kartenterminal neu starten? Das Kartenterminal ist dann für einige Zeit nicht verfügbar!
+    do_reboot: |
+      Kartenterminal neu starten? Das Kartenterminal ist dann für
+      einige Zeit nicht verfügbar!
+  cards:
+    no_contexts_assigned: |
+      ACHTUNG! Es ist noch kein Kontext zugeordnet!
+      Ohne einen Kontext stehen einige Funktionen nicht zur Verfügung
+      - Abfrage der Zertifikatsdaten, Abfrage PIN-Status, PIN-Verifizierung
